objects/Campaign_Member_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Criterias</relationshipLabel>
        <relationshipName>Campaign_Member_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Criteria_Groups</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria Group</label>
        <referenceTo>Campaign_Member_Criteria_Group__c</referenceTo>
        <relationshipLabel>Campaign Member Criterias</relationshipLabel>
        <relationshipName>Campaign_Member_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Id__c</fullName>
        <label>Criteria Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WM_CriteriaGroup_Id__c</fullName>
        <label>WM CriteriaGroup Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM_Criteria_Id__c</fullName>
        <externalId>true</externalId>
        <label>WM Criteria Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM_Sync_Status__c</fullName>
        <label>WM Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WM_Sync_Type__c</fullName>
        <label>WM_Sync_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Campaign Member Criteria</label>
    <nameField>
        <displayFormat>CMC{0000000000}</displayFormat>
        <label>Campaign Member Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>